logs/formprocess.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/FormEncode-1.3.1.egg-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/WebHelpers-1.3.egg-info'...
Listing './lib/python3.5/site-packages/WebOb-1.7.4.dist-info'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/docs'...
Listing './lib/python3.5/site-packages/formencode'...
Listing './lib/python3.5/site-packages/formencode/i18n'...
Listing './lib/python3.5/site-packages/formencode/i18n/cs'...
Listing './lib/python3.5/site-packages/formencode/i18n/cs/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/da'...
Listing './lib/python3.5/site-packages/formencode/i18n/da/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/de'...
Listing './lib/python3.5/site-packages/formencode/i18n/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/el'...
Listing './lib/python3.5/site-packages/formencode/i18n/el/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/es'...
Listing './lib/python3.5/site-packages/formencode/i18n/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/et'...
Listing './lib/python3.5/site-packages/formencode/i18n/et/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/fi'...
Listing './lib/python3.5/site-packages/formencode/i18n/fi/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/fr'...
Listing './lib/python3.5/site-packages/formencode/i18n/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/it'...
Listing './lib/python3.5/site-packages/formencode/i18n/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/ja'...
Listing './lib/python3.5/site-packages/formencode/i18n/ja/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/ko'...
Listing './lib/python3.5/site-packages/formencode/i18n/ko/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/lt'...
Listing './lib/python3.5/site-packages/formencode/i18n/lt/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/nb_NO'...
Listing './lib/python3.5/site-packages/formencode/i18n/nb_NO/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/nl'...
Listing './lib/python3.5/site-packages/formencode/i18n/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/pl'...
Listing './lib/python3.5/site-packages/formencode/i18n/pl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/pt_BR'...
Listing './lib/python3.5/site-packages/formencode/i18n/pt_BR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/pt_PT'...
Listing './lib/python3.5/site-packages/formencode/i18n/pt_PT/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/ru'...
Listing './lib/python3.5/site-packages/formencode/i18n/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/sk'...
Listing './lib/python3.5/site-packages/formencode/i18n/sk/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/sl'...
Listing './lib/python3.5/site-packages/formencode/i18n/sl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/sr'...
Listing './lib/python3.5/site-packages/formencode/i18n/sr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/sv'...
Listing './lib/python3.5/site-packages/formencode/i18n/sv/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/tr'...
Listing './lib/python3.5/site-packages/formencode/i18n/tr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/zh_CN'...
Listing './lib/python3.5/site-packages/formencode/i18n/zh_CN/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/i18n/zh_TW'...
Listing './lib/python3.5/site-packages/formencode/i18n/zh_TW/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/formencode/javascript'...
Listing './lib/python3.5/site-packages/formencode/tests'...
Listing './lib/python3.5/site-packages/formencode/tests/htmlfill_data'...
Listing './lib/python3.5/site-packages/formprocess'...
Compiling './lib/python3.5/site-packages/formprocess/handler.py'...
***   File "./lib/python3.5/site-packages/formprocess/handler.py", line 142
    except Invalid, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/formprocess-0.4.3.egg-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/webhelpers'...
Listing './lib/python3.5/site-packages/webhelpers/html'...
Compiling './lib/python3.5/site-packages/webhelpers/html/grid_demo.py'...
***   File "./lib/python3.5/site-packages/webhelpers/html/grid_demo.py", line 289
    print "... writing '%s'" % filename
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/webhelpers/html/render.py'...
***   File "./lib/python3.5/site-packages/webhelpers/html/render.py", line 395
    print render(html)
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/webhelpers/markdown.py'...
***   File "./lib/python3.5/site-packages/webhelpers/markdown.py", line 1865
    print OPTPARSE_WARNING
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/webhelpers/media.py'...
***   File "./lib/python3.5/site-packages/webhelpers/media.py", line 120
    print "%s:" % apath,
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/webhelpers/paginate.py'...
***   File "./lib/python3.5/site-packages/webhelpers/paginate.py", line 250
    raise Exception, "__getitem__ without slicing not supported"
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/webhelpers/public'...
Listing './lib/python3.5/site-packages/webhelpers/public/stylesheets'...
Listing './lib/python3.5/site-packages/webhelpers/pylonslib'...
Compiling './lib/python3.5/site-packages/webhelpers/textile.py'...
***   File "./lib/python3.5/site-packages/webhelpers/textile.py", line 2882
    print textile('tell me about textile.', head_offset=1)
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/webob'...
Listing './share'...
Listing './share/python-wheels'...
